# cloop

./: .env.template  .gitignore  BEFORE_AFTER_COMPARISON.md  FIXES_APPLIED.md  HANDOFF_FEATURE.md  HANDOFF_FEATURE_COMPLETE.md  HANDOFF_PROMPT.md  HANDOFF_USAGE.md  HANDOFF_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  LAUNCHER_GUIDE.md  MCP_SETUP.md  PERSONAL_WORKFLOW.md  PHASE1_ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE1_INDEX.md  PHASE1_SUMMARY.md  PORT_FIX.md  PORT_FIX_COMPLETE.md  PROGRESS_INDICATORS.md  PROJECT_PROFILES_READY.md  QUICKSTART_UI.md  QUICK_HANDOFF_START.md  QUICK_MCP_START.md  QUICK_START.md  QUICK_START_PHASE1.md  README.md  README_LAUNCHERS.md  README_MCP.md  SELF_TEST_GUIDE.md  SETUP_COMPLETE.md  START_HERE.md  START_HERE_PHASE1.md  UI_COMPLETE.md  UI_IMPROVEMENTS.md  VISION_FOR_YOUR_WORKFLOW.md  VISUAL_GUIDE.md  VSCODE_EXTENSION_READY.md  VSCODE_INTEGRATION.md  (+17 more)
.github/workflows/: ci.yml
docs/: 01_claude_handoff_roadmap.md  02_ultrathink_vision.md  03_developer_guide.md  fastapi_template_design.md  reference_implementation.py  scaffolding_feature.md  self_improvement_loop.md
profiles/: game.yaml  general.yaml  medical.yaml
src/ultrathink/: __init__.py  cli.py  engine.py  framework.py  knowledge_base.py  learning_engine.py  mcp_server.py  models.py  orchestrator.py  parser.py  patch_engine.py  profiles.py  self_test.py
tests/: test_cli.py  test_end_to_end_loop.py  test_framework.py  test_knowledge_base.py  test_learning_engine.py  test_parser.py  test_patch_engine.py  test_scaffolding.py  test_self_improvement_loop.py
ui/: Home.py  README.md  __init__.py  app.py
ui/components/: __init__.py
ui/pages/: 1_Analysis.py  2_Learning.py  3_Projects.py  4_Knowledge.py  5_Self_Test.py
vscode-extension/: .eslintrc.json  .vscodeignore  INSTALL.md  README.md  SETUP.md  SIMPLE_TEST.md  TEST_PLAN.md  TEST_RESULTS.md  TROUBLESHOOTING.md  package-lock.json  package.json  quick-test.bat  test-file.py
(+8 files in other folders)
